# akaitools

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  lint.yml  release.yml  tests.yml
api_reference/: index.html
docs/: api_reference.md  faq.md  index.md  installation.md  overview.md  troubleshooting.md
docs/usage/: cli.md  dataframe.md  dos.md  index.md  input.md  plotting.md  scf.md  spc.md
faq/: index.html
installation/: index.html
overview/: index.html
search/: search_index.json
src/akaitools/: __init__.py  _styles.py  cli.py  errors.py  input.py  models.py  plot.py  utils.py
src/akaitools/parsers/: __init__.py  atomic_properties.py  common.py  dos.py  go.py  spc.py
tests/: __init__.py  conftest.py  test_akai_tools.py  test_cli.py  test_errors.py  test_input.py  test_models.py  test_plot.py
tests/data/data/: fe  fe.info  fe_dn.spc  fe_up.spc  gaas  gaas.info  gaas_up.spc  li  li_up.spc  ni  ni.info  ni_dn.spc  ni_up.spc  nife  nife.info  nife_dn.spc  nife_up.spc
tests/data/in/: fe  fe.dos  fe.spc  gaas.dos  gaas.spc  li.dos  li.spc  ni  ni.dos  ni.spc  nife  nife.dos  nife.spc
tests/parsers/: __init__.py  test_atomic_properties.py  test_common.py  test_dos.py  test_fe.py  test_fe_spc.py  test_gaas.py  test_gaas_spc.py  test_go.py  test_li.py  test_li_dos.py  test_li_spc.py  test_ni.py  test_ni_spc.py  test_nife.py  test_nife_spc.py  test_spc.py
troubleshooting/: index.html
usage/: index.html
usage/cli/: index.html
usage/dataframe/: index.html
usage/dos/: index.html
usage/input/: index.html
usage/plotting/: index.html
usage/scf/: index.html
usage/spc/: index.html
