[project]
name = "akaitools"
version = "0.1.0"
description = "Tools for AkaiKKR electronic structure calculation output files"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
    { name = "Doguhan Sariturk", email = "dogu.sariturk@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Programming Language :: Python",
]
dependencies = [
    "numpy>=1.26",
    "typer>=0.12",
    "matplotlib>=3.8",
    "pandas>=2",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project.optional-dependencies]
docs = [
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.3",
]

[project.urls]
Home-page = "https://github.com/dogusariturk/akaitools/"
Issues = "https://github.com/dogusariturk/akaitools/issues"
Repository = "https://github.com/dogusariturk/akaitools.git"

[project.scripts]
akaitools = "akaitools.cli:main"

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.4",
    "ty>=0.0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle Errors
    "ERA", # Eradicate
    "F", # Pyflakes
    "FA",  # flake8-future-annotations
    "I", # isort
    "ICN", # flake8-import-conventions
    "N", # pep8-naming
    "PL",  # Pylint
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W", # pycodestyle Warnings
]
ignore = [
    "E501", # line too long
    "PLC0415", # import outside top-level
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "TC003", # typing only standard library import
]
pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty.src]
include = [
    "src",
    "tests",
]
